k8s/uptime-kuma.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma-deployment
  labels:
    app: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "100m"
          volumeMounts:
          - mountPath: /app/data
            name: uptime-kuma-data
            subPath: data
          imagePullPolicy: IfNotPresent
      volumes:
      - name: uptime-kuma-data
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  labels:
    app: uptime-kuma
spec:
  ports:
  - port: 80
    targetPort: 3001
    name: tcp
  selector:
    app: uptime-kuma
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  labels:
    app: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: status.lazz.tech
    http:
      paths:
      - backend:
          serviceName: uptime-kuma-service
          servicePort: 80
